--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "uuid": "^9.0.1",
